--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0"
   },
